# vortex

./: .gitignore  .gitmodules  .npmignore  CONTRIBUTING.md  README.md  TODOs  TODOs.txt  a.vlt  bytecode-planning  check.ts  colorize.ts  compile.ts  concept.vlt  getStdin.ts  package-lock.json  package.json  prettyErrorContext.ts  test.ts  tsconfig.json  unsolved.txt  vault-check  vxc  vxc.ts
concepts/: BadlyNamedClass.vlt  Pair.vlt  badlyNamedFunction.vlt  blah.vlt  counter.vlt  double.vlt  factorial.vlt  onlyAssigned.vlt  scope.vlt
docs/: examples.md
parser/: .gitignore  input.vlt  package-lock.json  package.json  parse.ts  test  vault-parse  vault.jison
projectEuler/: 1.vlt  2.vlt  3.vlt
src/vm/: .gitignore  Array.cpp  Array.hpp  CMakeLists.txt  Codes.cpp  Codes.hpp  Decoder.hpp  Exceptions.cpp  Exceptions.hpp  Func.cpp  Func.hpp  LexOrder.hpp  Machine.hpp  Makefile  Object.cpp  Object.hpp  Set.cpp  Set.hpp  Value.cpp  Value.hpp  asm.cpp  assemble.cpp  assemble.hpp  bytecode-planning  dasm.cpp  frontendUtil.cpp  frontendUtil.hpp  immer  readfs.cpp  readfs.hpp  run.cpp  runBuiltInMethod.cpp  runBuiltInMethod.hpp  runLines.cpp  scratch.cpp  types.hpp  vxvm.cpp
src/vm/testFiles/: array-literal.vat  array-of-arrays.vat  basic-arithmetic.vasm  basic-arithmetic.vat  bind.vat  collatz.vat  comparison.vat  concat.vat  dup.vat  factorial.vat  func.vat  gfunc.vat  has-index.vat  hello-world.vat  if-test.vat  index.vat  length.vat  more-array-stuff.vat  objects.vat  project-euler-1.vat  ret-0.vat  sum-1-to-4.vat  test  update.vat
src/vm/testFiles/exp/: functions.vat
(+573 files in other folders)
